fixed main menu on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ footer {
         }
         
         .main-menu a{
+          font-size: 15px;
           height:50px;
           line-height:50px;
           padding-left:10px;
